Adding R jupyter notebook

--- a/basic_python.ipynb
+++ b/basic_python.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Basic python versus R\n",
     "\n",
-    "Below is basic \n"
+    "Below is basic comparison syntax\n"
    ]
   },
   {
